[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Weidong Lian <weidong.lian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
proptest = "1.0"